[project]
name = "body-tracker"
version = "0.1.0"
author = "Vasco Santos / VaNOS"
description = "Personal weekly body metrics tracker."
requires-python = ">=3.11"

dependencies = [
    "typer>=0.12",
    "textual>=0.60",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
tracker = "app.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["app"]
